--- a/ProRunnerApp/CreateRunFrm.resx
+++ b/ProRunnerApp/CreateRunFrm.resx
@@ -222,6 +222,27 @@
   <data name="pnlCreateRun.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="dateTimePicker1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>415, 42</value>
+  </data>
+  <data name="dateTimePicker1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>115, 23</value>
+  </data>
+  <data name="dateTimePicker1.TabIndex" type="System.Int32, mscorlib">
+    <value>14</value>
+  </data>
+  <data name="&gt;&gt;dateTimePicker1.Name" xml:space="preserve">
+    <value>dateTimePicker1</value>
+  </data>
+  <data name="&gt;&gt;dateTimePicker1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.DateTimePicker, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;dateTimePicker1.Parent" xml:space="preserve">
+    <value>pnlCreateRun</value>
+  </data>
+  <data name="&gt;&gt;dateTimePicker1.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="label5.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -229,7 +250,7 @@
     <value>Xolonium, 9pt</value>
   </data>
   <data name="label5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>196, 50</value>
+    <value>131, 50</value>
   </data>
   <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
     <value>44, 13</value>
@@ -250,13 +271,13 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;label5.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="txtFileName.Font" type="System.Drawing.Font, System.Drawing">
     <value>Xolonium, 9pt</value>
   </data>
   <data name="txtFileName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>246, 45</value>
+    <value>181, 45</value>
   </data>
   <data name="txtFileName.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 22</value>
@@ -274,7 +295,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;txtFileName.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="mtxtDistance.Font" type="System.Drawing.Font, System.Drawing">
     <value>Xolonium, 9pt</value>
@@ -301,7 +322,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;mtxtDistance.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="btnSave.Font" type="System.Drawing.Font, System.Drawing">
     <value>Xolonium, 9pt</value>
@@ -328,7 +349,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;btnSave.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="label4.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -358,7 +379,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="label3.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -388,7 +409,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="cbWeather.Font" type="System.Drawing.Font, System.Drawing">
     <value>Xolonium, 9pt</value>
@@ -424,7 +445,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;cbWeather.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="lblTerrain.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -454,7 +475,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;lblTerrain.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="cbTerrain.Font" type="System.Drawing.Font, System.Drawing">
     <value>Xolonium, 9pt</value>
@@ -467,6 +488,9 @@
   </data>
   <data name="cbTerrain.Items2" xml:space="preserve">
     <value>Pathway</value>
+  </data>
+  <data name="cbTerrain.Items3" xml:space="preserve">
+    <value>Sand</value>
   </data>
   <data name="cbTerrain.Location" type="System.Drawing.Point, System.Drawing">
     <value>38, 117</value>
@@ -487,7 +511,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;cbTerrain.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>9</value>
   </data>
   <data name="label2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -517,7 +541,7 @@
     <value>pnlCreateRun</value>
   </data>
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>10</value>
   </data>
   <data name="pnlCreateRun.Location" type="System.Drawing.Point, System.Drawing">
     <value>83, 91</value>
